rework dragging fix flex-wrap on firefox when scrollbar get in view

--- a/style/mobile_style/m_style_board.css
+++ b/style/mobile_style/m_style_board.css
@@ -1,3 +1,9 @@
+@media (min-width:1500px) {
+    .board-outer-div {
+        width: 1160px;
+    }
+}
+
 @media(max-width:992px) {
     .main {
         padding-right: 0px;
