--- a/style/style_board.css
+++ b/style/style_board.css
@@ -504,7 +504,8 @@
 
 .drop-help-div {
     width: 100%;
-    height: 200px;
+    height: 100%;
+    min-height: 200px;
     border: 3px dotted lightgrey;
     border-radius: 30px;
 }
